# deepdiff

./: .bumpversion.cfg  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yaml
benchmarks/: multiprocessing_bench.py
deepdiff/: __init__.py  _multiprocessing.py  deephash.py  delta.py  diff.py  distance.py  helper.py  path.py  serialization.py
deepdiff/docstrings/: authors.rst  changelog.rst  diff_doc.rst  faq.rst  index.rst  support.rst
docs/: CLAUDE.md  authors.rst  basics.rst  changelog.rst  colored_view.rst  commandline.rst  conf.py  custom.rst  deep_distance.rst  deephash.rst  deephash_doc.rst  delta.rst  diff.rst  diff_doc.rst  dsearch.rst  exclude_paths.rst  extract.rst  faq.rst  ignore_order.rst  ignore_types_or_values.rst  index.rst  multi_processing.md  numbers.rst  optimizations.rst  other.rst  search_doc.rst  serialization.rst  stats.rst  support.rst  troubleshoot.rst  view.rst
docs/_static/: custom.css
docs/_templates/: about.html  page.html
docs/_templates/sidebar/: brand.html
tests/: test_cache.py  test_colored_view.py  test_command.py  test_delta.py  test_diff_group_by.py  test_distance.py  test_fraction.py  test_glob_paths.py  test_hash.py  test_ignore_order.py  test_lfucache.py  test_multiprocessing.py  test_security.py  test_serialization.py
