[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deepdiff"
version = "8.7.0"
dependencies = [
  "orderly-set>=5.4.1,<6",
]
requires-python = ">=3.10"
authors = [
  { name = "Seperman", email = "sep@zepworks.com" }
]
maintainers = [
  { name = "Seperman", email = "sep@zepworks.com" }
]
description = "Deep Difference and Search of any Python object/data. Recreate objects by adding adding deltas to each other."
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License"
]

# `dependency-groups` would make this a lot cleaner, in theory.
[project.optional-dependencies]
coverage = [
  "coverage~=7.13.4",
]
cli = [
  "click~=8.3.1",
  "pyyaml~=6.0.3"
]
dev = [
  "bump2version~=1.0.1",
  "jsonpickle~=4.1.1",
  "ipdb~=0.13.13",
  "numpy~=2.4.3; python_version >= '3.14'",
  "numpy~=2.2.0; python_version < '3.14'",
  "python-dateutil~=2.9.0.post0",
  "orjson~=3.11.7",
  "tomli~=2.4.0",
  "tomli-w~=1.2.0",
  "pandas~=3.0.1; python_version >= '3.11'",
  "pandas~=2.2.0; python_version < '3.11'",
  "polars~=1.38.1",
  "nox==2026.2.9",
  "uuid6==2025.0.1",
  "pytz",
]
docs = [
  # We use the html style that is not supported in Sphinx 7 anymore.
  "Sphinx~=6.2.0",
  "sphinx-sitemap~=2.6.0",
  "sphinxemoji~=0.3.0"
]
static = [
  "flake8~=7.1.0",
  "flake8-pyproject~=1.2.3",
  "pydantic~=2.12.5",
]
test = [
  "pytest~=9.0.2",
  "pytest-benchmark~=5.2.3",
  "pytest-cov~=7.0.0",
  "python-dotenv~=1.2.2",
]
optimize = [
  "orjson",
]

[project.scripts]
deep = "deepdiff.commands:cli"

[project.urls]
Homepage = "https://zepworks.com/deepdiff/"
Documentation = "https://zepworks.com/deepdiff/"
Repository = "https://github.com/seperman/deepdiff"
Issues = "https://github.com/seperman/deepdiff/issues"

[tool.coverage.run]
branch = true
source = ["."]

[tool.flake8]
max-line-length = 120
builtins = "json"
statistics = true
ignore = "E202"
exclude = "./data,./src,.svn,CVS,.bzr,.hg,.git,__pycache__"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"
